CMS: Initiate category services
