# app/router/cms_router.go
@@ -36,6 +36,12 @@ func (router *CmsRouter) Init(app *fiber.App) {
 	authentication.Post("/logout", jwtMiddleware, router.Controller.Auth.Logout)
 	authentication.Post("/refresh", jwtMiddleware, router.Controller.Auth.Refresh)
 
+	// Category
+	category := api.Group("/category")
+	category.Post("/create", router.Controller.Category.Create)
+	category.Put("/:categoryCode", router.Controller.Category.Update)
+	category.Delete("/:categoryCode", router.Controller.Category.Delete)
+
 }
 
 func CmsRouterProvider(
